create native android project

--- a/app.json
+++ b/app.json
@@ -24,10 +24,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.ktq.omabudjetti"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "bbc2e84b-81ab-42b8-8b96-2851d99af9cc"
+      }
+    },
+    "owner": "ktq"
   }
 }
