--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
+    "@reduxjs/toolkit": "^1.9.2",
     "expo": "~47.0.12",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-web": "~0.18.9",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
