--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@reduxjs/toolkit": "^1.9.2",
     "expo": "~47.0.12",
+    "expo-dev-client": "~2.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9",
-    "react-redux": "^8.0.5",
+    "react-native-paper": "^5.2.0",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-safe-area-context": "4.4.1",
-    "expo-dev-client": "~2.0.1"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.9",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
