--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@reduxjs/toolkit": "^1.9.2",
+    "babel-plugin-react-native-classname-to-style": "^1.2.2",
+    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "expo": "~47.0.12",
     "expo-dev-client": "~2.0.1",
     "expo-splash-screen": "~0.17.5",
@@ -20,6 +22,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-css-modules": "^0.0.1",
+    "react-native-css-transformer": "^1.2.4",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
