--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
@@ -30,16 +30,16 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.2.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
-    "react-redux": "^8.0.5",
-    "react-test-renderer": "^18.1.0"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "jest": "^29.4.2"
+    "jest": "^29.4.2",
+    "react-test-renderer": "^18.1.0"
   },
   "private": true
 }
