--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "jest": "^29.4.2",
     "react-test-renderer": "^18.1.0"
   },
