--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-native": "0.70.5",
     "react-native-css-modules": "^0.0.1",
     "react-native-css-transformer": "^1.2.4",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "expo-linear-gradient": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
