--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "expo": "~47.0.12",
     "expo-dev-client": "~2.0.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "lodash": "^4.17.21",
@@ -24,14 +25,15 @@
     "react-native": "0.70.5",
     "react-native-css-modules": "^0.0.1",
     "react-native-css-transformer": "^1.2.4",
+    "react-native-date-picker": "^4.2.9",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
-    "react-redux": "^8.0.5",
-    "expo-linear-gradient": "~12.0.1"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
