--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "jest",
+    "test-dev": "jest --watch"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@reduxjs/toolkit": "^1.9.2",
+    "@rneui/themed": "^4.0.0-rc.7",
     "babel-plugin-react-native-classname-to-style": "^1.2.2",
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "expo": "~47.0.12",
@@ -21,15 +23,16 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "lodash": "^4.17.21",
-    "react": "^18.1.0",
+    "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-css-modules": "^0.0.1",
     "react-native-css-transformer": "^1.2.4",
     "react-native-date-picker": "^4.2.9",
+    "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-paper": "^5.2.0",
+    "react-native-paper": "^5.3.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
@@ -38,9 +41,20 @@
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^11.5.4",
     "jest": "^29.4.2",
-    "react-test-renderer": "^18.1.0"
+    "jest-expo": "^48.0.2",
+    "react-test-renderer": "18.1.0"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native(-.*)?|@react-native(-community)?|@rneui|@expo|expo(-.*)?)/)"
+    ],
+    "setupFilesAfterEnv": [
+      "./setupTest.js"
+    ]
   },
   "private": true
 }
