--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest",
-    "test-dev": "jest --watch"
+    "test-dev": "jest --watch",
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
