--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
     "react-native-css-transformer": "^1.2.4",
     "react-native-date-picker": "^4.2.9",
     "react-native-elements": "^3.4.3",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.3.1",
-    "react-native-reanimated": "^2.14.4",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "reac-native-reanimated": "~2.12.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.2",
