--- a/app.json
+++ b/app.json
@@ -32,9 +32,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "bbc2e84b-81ab-42b8-8b96-2851d99af9cc"
+        "projectId": "d9fc285a-4f5d-475a-9803-c1a185f25abc"
       }
     },
-    "owner": "ktq"
+    "owner": "pingviinimursu"
   }
 }
